Other staff setup after merge:

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -39,30 +39,36 @@
     </div>
 </div>
 
-<div class="row team-members">
-    <h1 class="team-members-title">Other Team Members</h1>
-    <div class="large-3 columns team-member">
-        <h1 class="team-member-title">Vicki Tomby</h1>
-        <p class="team-member-info">
-            Vicki comes from a wellknown family, pioneers of the local area.
-        </p>
+<section class="other-staff">
+  <div class="row">
+
+    <div class="large-3 medium-6 columns image card">
+      <h2 class="title">Vicki Toomby</h2>
+      <a href="#"><img src="http://placehold.it/200x200">
+        <span class="reveal"><p>Spicy jalapeno bacon ipsum dolor amet jerky drumstick short loin. Jalapeno bacon ipsum<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+      </a>
     </div>
-    <div class="large-3 columns team-member">
-        <h1 class="team-member-title">Vicki Tomby</h1>
-        <p class="team-member-info">
-            Vicki comes from a wellknown family, pioneers of the local area.
-        </p>
+
+    <div class="large-3 medium-6 columns image card">
+      <h2 class="title">Lorem Ipsum</h2>
+      <a href="#"><img src="http://placehold.it/200x200">
+        <span class="reveal"><p>Key bresaola sausage cupim ham hamburger filet mignon landjaeger chicken. Prosciutto al.<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+      </a>
     </div>
-    <div class="large-3 columns team-member">
-        <h1 class="team-member-title">Vicki Tomby</h1>
-        <p class="team-member-info">
-            Vicki comes from a wellknown family, pioneers of the local area.
-        </p>
+
+    <div class="large-3 medium-6 columns image card">
+      <h2 class="title">Dolor Sit</h2>
+      <a href="#"><img src="http://placehold.it/200x200">
+        <span class="reveal"><p>catra pork belly short ribs strip steak flank ribeye. Andouille jerky fatback rump cupim.<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+      </a>
     </div>
-    <div class="large-3 columns team-member">
-        <h1 class="team-member-title">Vicki Tomby</h1>
-        <p class="team-member-info">
-            Vicki comes from a wellknown family, pioneers of the local area.
-        </p>
+
+    <div class="large-3 medium-6 columns image card">
+      <h2 class="title">Amet Dolor</h2>
+      <a href="#"><img src="http://placehold.it/200x200">
+        <span class="reveal"><p>Tra cow swine chuck shank biltong pig. Pork swine bresaola, pork loin jerky rump corned.<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+      </a>
     </div>
-</div>
+
+  </div>
+</section>
