Updated class names to be more meaningful

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -14,23 +14,23 @@
     </div>
 
     <div class="large-8 columns">
-        <h1 class="staff-about-title">Geoff Toomby</h1>
-        <p class="staff-about-position">
+        <h1 class="staff-name">Geoff Toomby</h1>
+        <p class="staff-subtitle">
             Owner
         </p>
-        <p class="staff-about-details">
+        <p class="staff-content">
             Geoff started as a carpenter before settling into the life of a Ringer working across properties in North Queensland. After a while, Geoff had gained himself a bit of a reputation for his horsemanship and people training skills. Properties started requesting
             him to visit to train both their horses and workers.
         </p>
-        <p class="staff-about-details">
+        <p class="staff-content">
             Born and bred in the bush, Geoff joined the Rodeo Circuit of the North, performing as both a Rider and Judge. Due to the type of work he had been doing, Geoff had found himself with a chronic back problems, this took a serious turn the day a horse came
             over backwards on top of him.
         </p>
-        <p class="staff-about-details">
+        <p class="staff-content">
             Geoff spent two years convalescing, had two stainless steel plates surgically implanted in his back and a peice of bone relocated from hip to spine. Fortunately his surgery was a success, which he attributes to the skills and professional abilities of
             Dr Bruce Low - 'a brilliant Orthopaedic Surgeon!'. Adding to his recovery and abilty to return horses was the introduction to Ross Emmett and his Emmett Therapy.
         </p>
-        <p class="staff-about-details">
+        <p class="staff-content">
             Training Stockman became a huge part of Geoff's life, with his true passion evolving back around 2001, the day a man named Brett Kraftt saw a demonstration delivered by Geoff and Vicki at Tennant Creek, NT. An invitation was extended to do a demonstration
             at Newcastle Waters to show the CEO of Consolidated Pastoral Companies, Ken Warriner, and all the staff, their horsemanship and stock handling training skills. From this, an offer was made for Geoff and Vicki to start formal training of all
             their staff, which continued for around 12 years until CPC was sold. Both Geoff and Vicki identify this opportunity as their starting point in delivering nationally accredited training programs, it was through this opportunity that they have
