--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="large-8 columns">
+    <div class="large-8 columns staff-details">
         <h1 class="staff-name">Geoff Toomby</h1>
         <p class="staff-subtitle">
             Owner
