Very slight name changes

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="large-4 columns staff-aside">
         <img class="staff-photo" src="http://placehold.it/300x300" width="300" height="300" alt="Geoff Toomby" />
-        <div class="qualifications">
-            <h2 class="qualification-title">Geoff’s list of qualifications include:</h2>
-            <ul class="qualification-list">
+        <div class="qualifications-content">
+            <h2 class="qualifications-prelude">Geoff’s list of qualifications include:</h2>
+            <ul class="qualifications-list">
                 <li class="qualification">Certificate IV Workplace Training and Assessment - TAE40110</li>
                 <li class="qualification">Diploma of Agriculture - RTE50103</li>
                 <li class="qualification">Diploma of Rural Business Management - RTE50403</li>
