Added title to other staff item

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -41,6 +41,7 @@
 
 <section class="other-staff">
   <div class="row">
+    <h1>Other Staff Members</h1>
 
     <div class="large-3 medium-6 columns image card">
       <h2 class="title">Vicki Toomby</h2>
