--- a/static/src/pages/about.html
+++ b/static/src/pages/about.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <h1 class="about-title">Introducing Team Tommby</h1>
+  <h1 class="about-title">Introducing Team Toomby</h1>
   <div class="large-8 columns about-us">
     <p class="about-content">
       Geoff and Vicki Toomby run a small herd of commercial cattle at Wonderland Station, located about 32kms north-west of Townsville City, North Queensland, and deliver skills development and industry- based training programs on-site at Toomby Horsemanship and the Toomby Horsemanship Ultimate Rural Training Centre.
