Created a subset of reveal-card specifically for staff members

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -43,7 +43,7 @@
   <div class="row">
     <h1>Other Staff Members</h1>
 
-    <div class="large-3 medium-6 columns image card">
+    <div class="large-3 medium-6 columns image card staff">
       <h2 class="title">Vicki Toomby</h2>
       <a href="#"><img src="http://placehold.it/200x200">
         <span class="reveal">
@@ -53,7 +53,7 @@
       </a>
     </div>
 
-    <div class="large-3 medium-6 columns image card">
+    <div class="large-3 medium-6 columns image card staff">
       <h2 class="title">Lorem Ipsum</h2>
       <a href="#"><img src="http://placehold.it/200x200">
         <span class="reveal">
@@ -63,7 +63,7 @@
       </a>
     </div>
 
-    <div class="large-3 medium-6 columns image card">
+    <div class="large-3 medium-6 columns image card staff">
       <h2 class="title">Dolor Sit</h2>
       <a href="#"><img src="http://placehold.it/200x200">
         <span class="reveal">
@@ -73,7 +73,7 @@
       </a>
     </div>
 
-    <div class="large-3 medium-6 columns image card">
+    <div class="large-3 medium-6 columns image card staff">
       <h2 class="title">Amet Dolor</h2>
       <a href="#"><img src="http://placehold.it/200x200">
         <span class="reveal">
