Placeholders and small tweaks

--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -1,73 +1,79 @@
 <section class="hero">
-  <div class="row">
-    <div class="medium-8 medium-centered columns">
+    <div class="row">
+        <div class="medium-8 medium-centered columns">
 
-      <h1>Toomby Horsemanship</h1>
-      <p>Donec dignissim, arcu sit amet mollis posuere, purus tellus elementum massa, id cursus sem lorem molestie lorem. Donec
-        facilisis faucibus interdum. Ut eu consectetur quam. Donec ac porttitor leo. Nam egestas venenatis velit id mollis.
-        Proin pretium enim enim.</p>
+            <h1>Toomby Horsemanship</h1>
+            <p>Donec dignissim, arcu sit amet mollis posuere, purus tellus elementum massa, id cursus sem lorem molestie
+                lorem. Donec
+                facilisis faucibus interdum. Ut eu consectetur quam. Donec ac porttitor leo. Nam egestas venenatis velit
+                id mollis.
+                Proin pretium enim enim.</p>
+        </div>
     </div>
-  </div>
 </section>
 
 <section class="training">
-  <div class="row">
+    <div class="row">
 
-    <div class="large-3 medium-6 columns image card">
-      <h2 class="title">Working Dogs &amp; Horses</h2>
-      <a href="#"><img src="https://images.pexels.com/photos/163704/bike-old-wheel-two-wheeled-vehicle-163704.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb">
-        <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-      </a>
+        <div class="large-3 medium-6 columns image card">
+            <h2 class="title">Working Dogs &amp; Horses</h2>
+            <a href="#"><img
+                    src="http://placehold.it/300x400">
+                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+            </a>
+        </div>
+
+        <div class="large-3 medium-6 columns image card">
+            <h2 class="title">Ultimate Rural Training Centre</h2>
+            <a href="#"><img
+                    src="http://placehold.it/300x400">
+                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+            </a>
+        </div>
+
+        <div class="large-3 medium-6 columns image card">
+            <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
+            <a href="#"><img
+                    src="http://placehold.it/300x400">
+                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+            </a>
+        </div>
+
+        <div class="large-3 medium-6 columns image card">
+            <h2 class="title">EMM-TECH</h2>
+            <a href="#"><img
+                    src="http://placehold.it/300x400">
+                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+            </a>
+        </div>
+
     </div>
-
-    <div class="large-3 medium-6 columns image card">
-      <h2 class="title">Ultimate Rural Training Centre</h2>
-      <a href="#"><img src="https://images.pexels.com/photos/163704/bike-old-wheel-two-wheeled-vehicle-163704.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb">
-        <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-      </a>
-    </div>
-
-    <div class="large-3 medium-6 columns image card">
-      <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
-      <a href="#"><img src="https://images.pexels.com/photos/163704/bike-old-wheel-two-wheeled-vehicle-163704.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb">
-        <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-      </a>
-    </div>
-
-    <div class="large-3 medium-6 columns image card">
-      <h2 class="title">EMM-TECH</h2>
-      <a href="#"><img src="https://images.pexels.com/photos/163704/bike-old-wheel-two-wheeled-vehicle-163704.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb">
-        <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-      </a>
-    </div>
-
-  </div>
 </section>
 
 <section class="latest-news">
-  <div class="row">
-    <h2>Latest News</h2>
+    <div class="row">
+        <h2>Latest News</h2>
 
-    <div class="medium-4 columns card">
-      <img src="assets/img/news/firm-takes-skills-rein.jpg">
-      <div class="card-section">
-        <h3>Firm Takes Skills Rein</h3>
-      </div>
+        <div class="medium-4 columns card">
+            <img src="http://placehold.it/400x300">
+            <div class="card-section">
+                <h3>Firm Takes Skills Rein</h3>
+            </div>
+        </div>
+
+        <div class="medium-4 columns card">
+            <img src="http://placehold.it/400x300">
+            <div class="card-section">
+                <h3>Firm Takes Skills Rein</h3>
+            </div>
+        </div>
+
+        <div class="medium-4 columns card">
+            <img src="http://placehold.it/400x300">
+            <div class="card-section">
+                <h3>Firm Takes Skills Rein</h3>
+            </div>
+        </div>
+
     </div>
-
-    <div class="medium-4 columns card">
-      <img src="assets/img/news/firm-takes-skills-rein.jpg">
-      <div class="card-section">
-        <h3>Firm Takes Skills Rein</h3>
-      </div>
-    </div>
-
-    <div class="medium-4 columns card">
-      <img src="assets/img/news/firm-takes-skills-rein.jpg">
-      <div class="card-section">
-        <h3>Firm Takes Skills Rein</h3>
-      </div>
-    </div>
-
-  </div>
 </section>
