--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -57,23 +57,34 @@
         <div class="medium-4 columns card">
             <img src="http://placehold.it/400x300">
             <div class="card-section">
+                <span>20 April, 2017</span>
                 <h3>Firm Takes Skills Rein</h3>
+                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
+                    erat nec nulla. Donec in ligula erat.</p>
+                <a href="#" class="read-more">Read More</a>
             </div>
         </div>
 
         <div class="medium-4 columns card">
             <img src="http://placehold.it/400x300">
             <div class="card-section">
-                <h3>Firm Takes Skills Rein</h3>
+                <span>15 April, 2017</span>
+                <h3>Working Dogs...</h3>
+                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
+                    erat nec nulla. Donec in ligula erat.</p>
+                <a href="#" class="read-more">Read More</a>
             </div>
         </div>
 
         <div class="medium-4 columns card">
             <img src="http://placehold.it/400x300">
             <div class="card-section">
-                <h3>Firm Takes Skills Rein</h3>
+                <span>11 April, 2017</span>
+                <h3>Animal Educators Horsing Around</h3>
+                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
+                    erat nec nulla. Donec in ligula erat.</p>
+                <a href="#" class="read-more">Read More</a>
             </div>
         </div>
-
     </div>
 </section>
