--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -54,37 +54,46 @@
     <div class="row">
         <h2>Latest News</h2>
 
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <img src="http://placehold.it/400x300">
-            <div class="card-section">
-                <span class="date">20 April, 2017</span>
-                <h3>Firm Takes Skills Rein</h3>
-                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
-                    erat nec nulla. Donec in ligula erat.</p>
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <img src="http://placehold.it/400x300">
+                <div class="card-section">
+                    <span class="date">20 April, 2017</span>
+                    <h3>Firm Takes Skills Rein</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
             </div>
-            <a href="#" class="read-more">Read More</a>
         </div>
 
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <img src="http://placehold.it/400x300">
-            <div class="card-section">
-                <span class="date">15 April, 2017</span>
-                <h3>Working Dogs...</h3>
-                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
-                    erat nec nulla. Donec in ligula erat.</p>
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <img src="http://placehold.it/400x300">
+                <div class="card-section">
+                    <span class="date">15 April, 2017</span>
+                    <h3>Working Dogs...</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
             </div>
-            <a href="#" class="read-more">Read More</a>
         </div>
 
-        <div class="medium-4 columns card" data-equalizer-watch>
-            <img src="http://placehold.it/400x300">
-            <div class="card-section">
-                <span class="date">11 April, 2017</span>
-                <h3>Animal Educators Horsing Around</h3>
-                <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum eros
-                    erat nec nulla. Donec in ligula erat.</p>
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <img src="http://placehold.it/400x300">
+                <div class="card-section">
+                    <span class="date">11 April, 2017</span>
+                    <h3>Animal Educators Horsing Around</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
             </div>
-            <a href="#" class="read-more">Read More</a>
         </div>
     </div>
 </section>
