--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -25,7 +25,7 @@
 
         <div class="large-3 medium-6 columns image card">
             <h2 class="title">Ultimate Rural Training Centre</h2>
-            <a href="#"><img
+            <a href="ultimate-rural-training-centre.html"><img
                     src="http://placehold.it/300x400">
                 <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
             </a>
