Css colour tweaks

--- a/static/src/pages/ultimate-rural-training-centre.html
+++ b/static/src/pages/ultimate-rural-training-centre.html
@@ -101,7 +101,7 @@
     <section class="faq">
         <div class="row">
             <div class="columns">
-                <h3>Frequently Asked Questions</h3>
+                <h3 class="title">Frequently Asked Questions</h3>
             </div>
 
             <div class="small-up-1 medium-up-2 large-up-2">
