Use Section instead of title

--- a/static/src/pages/ultimate-rural-training-centre.html
+++ b/static/src/pages/ultimate-rural-training-centre.html
@@ -2,7 +2,7 @@
     <section class="hero">
         <div class="row">
             <h1>Ultimate Rural Training Centre</h1>
-            <div class="large-7 medium-9 medium-centered columns box">
+            <div class="medium-9 medium-centered columns box">
                 <p class="lead">Looking for an opportunity to gain hands-on experience whilst forming your industry
                     skills and knowledge to help start your career on a cattle station?</p>
                 <p>This is a full qualiﬁcation offering both face-to-face and on-the-job Training in Townsville with
@@ -98,10 +98,10 @@
 
     </section>
 
-    <section class="faq">
+    <section class="faq section">
         <div class="row">
             <div class="columns">
-                <h3 class="title">Frequently Asked Questions</h3>
+                <h3>Frequently Asked Questions</h3>
             </div>
 
             <div class="small-up-1 medium-up-2 large-up-2">
