--- a/static/src/pages/ultimate-rural-training-centre.html
+++ b/static/src/pages/ultimate-rural-training-centre.html
@@ -164,4 +164,61 @@
         </div>
     </section>
 
+
+    <section class="faq section">
+        <div class="row">
+            <div class="columns">
+                <h3>Workwear and Safety Gear</h3>
+
+                <div class="medium-8 columns">
+                    <p>This course will involve hands-on practical learning, outdoors. Participation in practical
+                        learning requires students to be dressed in suitable workwear. As a Station Hand, suitable
+                        workwear includes:</p>
+                    <h4>Riding Boots</h4>
+                    <p>Not steel capped, but needs to be above the ankle riding boot, and be sure to get work
+                        boots
+                        and not
+                        dress boots.</p>
+                    <h4>Long Sleeved Button Up Shirt</h4>
+                    <p>
+                        Cotton work shirts and flannelettes are suitable, high vis shirts are not required
+                    </p>
+                    <h4>Riding Jeans</h4>
+                    <p>
+                        riding jeans are recommended as this helps minimise chaffing when riding horses
+                    </p>
+                    <h4>Wide Brimmed Hat</h4>
+                    <p>
+                        a wide brimmed is highly recommended, caps if worn correctly also give adequate
+                        protection
+                        as
+                        training will be outdoors
+                    </p>
+                    <h4>Belt</h4>
+                    <p>
+                        use it to hold your jeans up as loose jeans can be a hazard in the this industry
+                    </p>
+                    <h4>Kercheif</h4>
+                    <p>
+                        works well in protecting the face from the environmental hazards - sun, dust, wind etc -
+                        as
+                        recomended by Vicki
+                    </p>
+                    <h4>Camelbak Hydration Pack</h4>
+                    <p>
+                        we also recommend using a camelbak instead of water bottles, moreso when horse riding
+                    </p>
+                </div>
+                <div class="medium-4 columns">
+                    <a href="#" class="thumbnail"><img src="http://placehold.it/400x600"
+                                                       alt="Get all your gear from Donohues"></a>
+                    <p>Be sure to visit our supporting partner Donohues for your workwear needs. Mention that you
+                        are commencing a course with us and they'll make sure you get the right gear.</p>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
 </div>
