--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -50,9 +50,55 @@
     </div>
 </section>
 
-<section class="latest-news" data-equalizer data-equalize-on="medium">
+<section class="latest-news section" data-equalizer data-equalize-on="medium">
     <div class="row">
         <h2>Latest News</h2>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">20 April, 2017</span>
+                    <h3>Firm Takes Skills Rein</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">15 April, 2017</span>
+                    <h3>Working Dogs...</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">11 April, 2017</span>
+                    <h3>Animal Educators Horsing Around</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="latest-news section" data-equalizer data-equalize-on="medium">
+    <div class="row">
+        <h2>Latest News With Images</h2>
 
         <div class="medium-4 columns">
             <div class="card" data-equalizer-watch>
