Split other-staff into its own component and removed junk from staff-card

--- a/static/src/pages/staff.html
+++ b/static/src/pages/staff.html
@@ -39,7 +39,8 @@
             </p>
         </div>
     </div>
-</section> <!-- End staff-information -->
+</section>
+<!-- End staff-information -->
 
 <section class="other-staff">
     <div class="row">
