--- a/static/src/pages/news.html
+++ b/static/src/pages/news.html
@@ -18,7 +18,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
@@ -28,7 +28,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
@@ -44,7 +44,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
@@ -54,7 +54,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
@@ -64,7 +64,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
@@ -74,7 +74,7 @@
 			<img src="https://www.placecage.com/c/600/600">
 		</div>
 		<div class="card-section">
-			<p>11 Apr 2016</p>
+			<p class="date">11 Apr 2016</p>
 			<h4>Top 10 things that will make you awesome!</h4>
 			<p>You won't believe what number 7 is..</p>
 		</div>
