Other staff added to page

--- a/static/src/pages/about.html
+++ b/static/src/pages/about.html
@@ -62,8 +62,4 @@ Past, present and future students are all an extension of the Team Toomby Family
 
 </div>
 
-<section class="other-staff">
-  <h1>
-    TO BE IMPLEMENTED AFTER MERGING OF BRANCH a2-14
-  </h1>
-</section>
+{{> other-staff}}
