--- a/static/src/pages/about.html
+++ b/static/src/pages/about.html
@@ -1,65 +1,73 @@
-<div class="row">
+<section class="about-us">
+    <div class="row">
 
-  <h1 class="about-title">Introducing Team Toomby</h1>
-  <div class="large-8 columns about-us">
-    <p class="about-content">
-      Geoff and Vicki Toomby run a small herd of commercial cattle at Wonderland Station, located about 32kms north-west of Townsville City, North Queensland, and deliver skills development and industry- based training programs on-site at Toomby Horsemanship and the Toomby Horsemanship Ultimate Rural Training Centre.
-    </p>
-    <p class="about-content">
-      Familiar faces throughout North Queensland and the Northern Territory, Geoff and Vicki have been opening their gates and travelling across the top end delivering training programs and clinics in Horsemanship, Working Dogs and Horses, Stock Handling and Mustering, as well as guiding individuals seeking career pathways in the Rural Industry. Geoff's extensive experience working with horses and livestock in the bush and Vicki's deep knowledge of handling horses and working experience hauling livestock, has enabled them to develop their unique techniques.
-    </p>
-    <p class="about-content">
-      Whilst Geoff and Vicki remain the heart and soul of Toomby Horsemanship, they have a team of people working alongside them, helping with the day-to-day running and delivery of programs. Together they are known as 'Team Toomby', dedicated to imparting their combined skills, knowledge and experience to others.
-    </p>
-    <p class="about-content">
-      In 2014 the Toomby Horsemanship Ultimate Rural Training Centre was formed to deliver training programs, using current industry practices and a thing or two they have picked up along the way from the Ringers and Stockmen of yesteryear.
-Past, present and future students are all an extension of the Team Toomby Family, with a genuine interest in each student’s progress throughout their career and across their personal lives. This is the
- passion that drives Team Toomby, providing programs that encourage, support and develop young people and putting heart back into the Rural Industry.
-    </p>
-  </div>
+        <h1>Introducing Team Toomby</h1>
+        <div class="large-8 columns">
+            <p>
+                Geoff and Vicki Toomby run a small herd of commercial cattle at Wonderland Station, located about 32kms north-west of Townsville City, North Queensland, and deliver skills development and industry- based training programs on-site at Toomby Horsemanship
+                and the Toomby Horsemanship Ultimate Rural Training Centre.
+            </p>
+            <p>
+                Familiar faces throughout North Queensland and the Northern Territory, Geoff and Vicki have been opening their gates and travelling across the top end delivering training programs and clinics in Horsemanship, Working Dogs and Horses, Stock Handling and
+                Mustering, as well as guiding individuals seeking career pathways in the Rural Industry. Geoff's extensive experience working with horses and livestock in the bush and Vicki's deep knowledge of handling horses and working experience hauling
+                livestock, has enabled them to develop their unique techniques.
+            </p>
+            <p>
+                Whilst Geoff and Vicki remain the heart and soul of Toomby Horsemanship, they have a team of people working alongside them, helping with the day-to-day running and delivery of programs. Together they are known as 'Team Toomby', dedicated to imparting
+                their combined skills, knowledge and experience to others.
+            </p>
+            <p>
+                In 2014 the Toomby Horsemanship Ultimate Rural Training Centre was formed to deliver training programs, using current industry practices and a thing or two they have picked up along the way from the Ringers and Stockmen of yesteryear. Past, present and
+                future students are all an extension of the Team Toomby Family, with a genuine interest in each student’s progress throughout their career and across their personal lives. This is the passion that drives Team Toomby, providing programs
+                that encourage, support and develop young people and putting heart back into the Rural Industry.
+            </p>
+        </div>
 
-  <div class="large-4 columns about-aside">
-    <img class="about-photo" src="http://placehold.it/300x300" width="300" height="300" alt="Geoff Toomby" />
-  </div>
+        <div class="large-4 columns aside">
+            <img src="http://placehold.it/300x300" width="300" height="300" alt="About Us" />
+        </div>
 
-</div>
-
-<div class="row vision-mission-value">
-  <h1 class="about-title">Our Vision, Mission &amp; Values</h1>
-
-  <div class="row">
-    <div class="large-6 columns">
-      <h1 class="about-subtitle">Vision</h1>
-      <p>
-        To make vital and ongoing contributions to the Local Community and the Rural Industry, by providing opportunities for people to access safe, quality and current skills development and industry-based training programs.
-      </p>
     </div>
-    <div class="large-6 columns">
-      <h2 class="about-subtitle">Mission</h2>
-      <p>
-        To provide safe, quality and current skills development and industry-based training programs to people seeking opportunity to upskill or learn new skills for their personal and professional pathways.
-      </p>
-    </div>
-  </div>
+</section>
 
-  <div class="row">
-    <div class="large-6 columns">
-      <h2 class="about-subtitle">Values</h2>
-      <p class="about-values">
-        Respect ǀ Integrity ǀ Honesty ǀ Equality ǀ Pride
-      </p>
-      <p class="about-values-quote">
-        Be Passionate - Never Give Up - Make it Fun!
-      </p>
-    </div>
-    <div class="large-6 columns">
-      <h2 class="about-subtitle">Acknowledgement of Country</h2>
-      <p>
-        We acknowledge our nation's First People and the Traditional Land Owners of the area where Wonderland Station is located, the Wulgurukaba and Bindal People, and pay respect to their cultures, their ancestors and to the Elders past, present and future generations.
-      </p>
-    </div>
-  </div>
+<section class="goals">
+    <div class="row">
+        <h1>Our Vision, Mission &amp; Values</h1>
 
-</div>
+        <div class="row item">
+            <div class="large-6 columns">
+                <h1>Vision</h1>
+                <p>
+                    To make vital and ongoing contributions to the Local Community and the Rural Industry, by providing opportunities for people to access safe, quality and current skills development and industry-based training programs.
+                </p>
+            </div>
+            <div class="large-6 columns">
+                <h1>Mission</h1>
+                <p>
+                    To provide safe, quality and current skills development and industry-based training programs to people seeking opportunity to upskill or learn new skills for their personal and professional pathways.
+                </p>
+            </div>
+        </div>
+
+        <div class="row item">
+            <div class="large-6 columns">
+                <h1>Values</h1>
+                <p class="values">
+                    Respect ǀ Integrity ǀ Honesty ǀ Equality ǀ Pride
+                </p>
+                <p class="quote">
+                    Be Passionate - Never Give Up - Make it Fun!
+                </p>
+            </div>
+            <div class="large-6 columns">
+                <h1>Acknowledgement of Country</h1>
+                <p>
+                    We acknowledge our nation's First People and the Traditional Land Owners of the area where Wonderland Station is located, the Wulgurukaba and Bindal People, and pay respect to their cultures, their ancestors and to the Elders past, present and future
+                    generations.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 {{> other-staff}}
