Slight name change

--- a/static/src/pages/about.html
+++ b/static/src/pages/about.html
@@ -30,7 +30,7 @@
     </div>
 </section>
 
-<section class="goals">
+<section class="our-goals">
     <div class="row">
         <h1>Our Vision, Mission &amp; Values</h1>
 
