Gave class to each sub-goal

--- a/static/src/pages/about.html
+++ b/static/src/pages/about.html
@@ -34,20 +34,20 @@
     <div class="row">
         <h1>Our Vision, Mission &amp; Values</h1>
 
-        <div class="large-6 columns" data-equalizer-watch>
+        <div class="large-6 columns goal" data-equalizer-watch>
             <h1>Vision</h1>
             <p>
                 To make vital and ongoing contributions to the Local Community and the Rural Industry, by providing opportunities for people to access safe, quality and current skills development and industry-based training programs.
             </p>
         </div>
-        <div class="large-6 columns" data-equalizer-watch>
+        <div class="large-6 columns goal" data-equalizer-watch>
             <h1>Mission</h1>
             <p>
                 To provide safe, quality and current skills development and industry-based training programs to people seeking opportunity to upskill or learn new skills for their personal and professional pathways.
             </p>
         </div>
 
-        <div class="large-6 columns" data-equalizer-watch>
+        <div class="large-6 columns goal" data-equalizer-watch>
             <h1>Values</h1>
             <p class="values">
                 Respect ǀ Integrity ǀ Honesty ǀ Equality ǀ Pride
@@ -56,7 +56,7 @@
                 Be Passionate - Never Give Up - Make it Fun!
             </p>
         </div>
-        <div class="large-6 columns" data-equalizer-watch>
+        <div class="large-6 columns goal" data-equalizer-watch>
             <h1>Acknowledgement of Country</h1>
             <p>
                 We acknowledge our nation's First People and the Traditional Land Owners of the area where Wonderland Station is located, the Wulgurukaba and Bindal People, and pay respect to their cultures, their ancestors and to the Elders past, present and future
