--- a/static/src/pages/index.html
+++ b/static/src/pages/index.html
@@ -1,50 +1,56 @@
-<section class="hero">
+<div class="hero">
     <div class="row">
-        <div class="medium-8 medium-centered columns">
-
-            <h1>Toomby Horsemanship</h1>
-            <p>Donec dignissim, arcu sit amet mollis posuere, purus tellus elementum massa, id cursus sem lorem molestie
-                lorem. Donec
-                facilisis faucibus interdum. Ut eu consectetur quam. Donec ac porttitor leo. Nam egestas venenatis velit
-                id mollis.
-                Proin pretium enim enim.</p>
+        <div class="medium-8 medium-centered column">
+            <h1>Welcome to Wonderland Station</h1>
+            <p>Etiam nec risus nec massa ornare dapibus. Vivamus id cursus odio, at porta est. Sed a est justo.
+                Pellentesque efficitur mollis lorem non semper. Nam lacinia ante nunc, vel mattis odio lobortis et.
+                Aliquam eget risus sapien. Nulla facilisi. Nunc pulvinar, mauris ut suscipit tempor, lacus est mattis
+                tortor, eu efficitur risus nibh eget augue. </p>
         </div>
     </div>
-</section>
+</div>
 
 <section class="training">
     <div class="row">
 
-        <div class="large-3 medium-6 columns image card">
-            <h2 class="title">Working Dogs &amp; Horses</h2>
-            <a href="#"><img
-                    src="http://placehold.it/300x400">
-                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-            </a>
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">Working Dogs &amp; Horses</h2>
+                <a href="#"><img
+                        src="http://placehold.it/300x400">
+                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+                </a>
+            </div>
         </div>
 
-        <div class="large-3 medium-6 columns image card">
-            <h2 class="title">Ultimate Rural Training Centre</h2>
-            <a href="ultimate-rural-training-centre.html"><img
-                    src="http://placehold.it/300x400">
-                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-            </a>
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">Ultimate Rural Training Centre</h2>
+                <a href="ultimate-rural-training-centre.html"><img
+                        src="http://placehold.it/300x400">
+                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+                </a>
+            </div>
         </div>
 
-        <div class="large-3 medium-6 columns image card">
-            <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
-            <a href="#"><img
-                    src="http://placehold.it/300x400">
-                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-            </a>
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
+                <a href="#"><img
+                        src="http://placehold.it/300x400">
+                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+                </a>
+            </div>
         </div>
 
-        <div class="large-3 medium-6 columns image card">
-            <h2 class="title">EMM-TECH</h2>
-            <a href="#"><img
-                    src="http://placehold.it/300x400">
-                <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
-            </a>
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">EMM-TECH</h2>
+                <a href="#"><img
+                        src="http://placehold.it/300x400">
+                    <span class="reveal"><p>Check it<br><i class="fa fa-link" aria-hidden="true"></i></p></span>
+                </a>
+            </div>
         </div>
 
     </div>
